overflow: auto added (responsive fix)

--- a/src/nasz.css
+++ b/src/nasz.css
@@ -29,7 +29,8 @@
       width: 425px;
       border-radius: 10px;
       box-shadow: 0 .5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
-      max-height: 90vh;
+      max-height: 90vh;  
+      overflow: auto !important;
     }
   }
 
@@ -38,10 +39,10 @@
       margin: 0 !important;
       width: 100vw;
       display: block !important;
-      overflow: auto !important;
       overflow-wrap: break-word;
       max-height: 90vh;
       z-index: 1002 !important;
+      overflow: auto !important;
     }
   }
 
